7 задание основное правки

--- a/lesson_7/timer.html
+++ b/lesson_7/timer.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Lesson 7</title>
+	<link rel="stylesheet" href="css/timer.css">
 </head>
 <body>
 	<div name = timer-here id = timer-here>
