--- a/extra_1/index.html
+++ b/extra_1/index.html
@@ -10,6 +10,6 @@
   <input type="text" id="country" autofocus="" placeholder="Введите страну">
   <div id="list"></div>
 </div>
-<script type="JavaScript/extra_1.js"></script>
+<script src="JavaScript/extra_1.js"></script>
 </body>
 </html>
