--- a/lesson_10/index.html
+++ b/lesson_10/index.html
@@ -5,6 +5,6 @@
 	<title>Lesson 10</title>
 </head>
 <body>
-	<script type="text/javascript" src="JavaScript/lesson_10.js"></script>
+	<script src="JavaScript/lesson_10.js"></script>
 </body>
 </html>
