--- a/lesson_14/index.html
+++ b/lesson_14/index.html
@@ -230,7 +230,9 @@
 					</div>
 	 		</div>
 	</div>
-	<script src="node_modules/@babel/polyfill/dist/polyfill.js"></script>
+	<div id="output"></div>
+	<!-- Load Babel -->
+	<script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
 	<script src="js/bundle.js"></script>
 </body>
 </html>
