--- a/lesson_11/index.html
+++ b/lesson_11/index.html
@@ -230,6 +230,9 @@
 					</div>
 	 		</div>
 	</div>
+	<script> 
+	require("@babel/polyfill");
+	</script>
 	<script src="js/script.js"></script>
 </body>
 </html>
