--- a/promisses_bonus/index.html
+++ b/promisses_bonus/index.html
@@ -7,6 +7,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Roboto+Slab:300,400,700&amp;subset=cyrillic-ext" rel="stylesheet">
 	<link rel="stylesheet" href="css/bootstrap-grid.min.css">
 	<link rel="stylesheet" href="css/style.css">
+
 </head>
 <body>
 	<header>
@@ -230,9 +231,7 @@
 					</div>
 	 		</div>
 	</div>
-	<script> 
-	require("@babel/polyfill");
-	</script>
+	<script src="node_modules/@babel/polyfill/dist/polyfill.js"></script>
 	<script src="js/script.js"></script>
 </body>
 </html>
