--- a/lesson_13/index.html
+++ b/lesson_13/index.html
@@ -15,7 +15,7 @@
         <div class="modal_contact">
           <h3>Заполните форму и мы свяжемся с вами</h3>
           <div class="form">
-              <form action="#" class="form-inline contactform_select">
+              <form action="#" class="form-inline contactform_select" method="POST">
                 <div class="input-group">
                   <div class="input-group-addon"><i class="fa fa-user " aria-hidden="true"></i>
                   </div>
